--- a/style.css
+++ b/style.css
@@ -7,10 +7,18 @@
 
 /* Basisinstellingen voor alle pagina's, alleen aanpassen als je pro wilt worden */
 
-html, body {                      /* geldt voor html en body */
-  margin: 0px;                    /* standaard marge 0 */
-  background-color: #ffffff;    /* achtergrondkleur lichtgrijs */
-  color: #303030;               /* tekstkleur donkergrijs */
+html, body {                      /* geldt voor html en body */     /* standaard marge 0 */
+  height:100%
+  padding: 0;
+  background-image: url("https://wallpapercrafter.com/sizes/1366x768/125104-Porsche-Porsche-911-Carrera-car-vehicle-Forza-Horizon-4-video-games-Porsche-992-Porsche-911-closeup.jpg");
+  background-repeat: repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+
+  
+  /* achtergrondkleur lichtgrijs */
+  color: #303030;  
+  /* tekstkleur donkergrijs */
 }  
 
 body * {                          /* geldt voor alles in body */
@@ -35,18 +43,19 @@ main {
 
 h1, h2, h3 {                      /* geldt voor h1 en h2 en h3 */
   margin: 10px 0px;
-  text-align: left;             /* tekst centreren */
+  text-align: center;             /* tekst centreren */
 } 
 
 p {
   margin: 10px 0px;
-  text-align: justify;            /* tekst links en rechts uitvullen */
+  text-align: center;            /* tekst links en rechts uitvullen */
 }
 
 /* Indeling voor hoofd pagina */
 
 .inleiding {
   color: #b3b3b3
+  
 }
 .inleiding {
   border: 2px #303030;
@@ -66,14 +75,14 @@ p {
   width:300px;
   float:right;
 }
-.kolomLinks2 {
-  Width:200px;
-  float:left;
+
 }
+
 /* Opmaak voor alle pagina's */
 
 h1, h2, {
       color: #525252;
+
 }
 .smalltext {
     text-align: center;
