--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body * {                          /* geldt voor alles in body */
 /* Indeling voor alle pagina's */
 
 .page {
-  width: 700px;                   /* vaste breedte van 700 pixels */
+  width: 80%;                   /* vaste breedte van 700 pixels */
   margin: 10px auto;              /* boven en onder 0 pixels marge, links en rechts marge gelijk verdeeld (gecentreerd) */
 }
 
@@ -67,14 +67,49 @@ p {
 }
 
 /* Indeling voor hoofd pagina */
+.pagePicker {
+  border:solid 2px green;
+  width: 100%;
+}
+.blokTekst {
+  width:50%;
+  float:left;
+  border:solid 2px red;
+}
+.blokIconen {
+  width:50%;
+  float:left;
+  border:solid 2px grey;
+}
+.icon {
+  border:solid 2px purple;
+  width:50%;
+  float:left;
+  padding:10px;
+  min-width:200px;
+}
+.icon img { /*img in .icon */
+  width:100%;
+  }
+.tesktGroot {
+  font-size:10em;
+  color:red;
+}
+.tesktKlein {
+  font-size:1em;
+  color:grey;
+}
+/* Indeling voor 911 pagina */
 .passie {
   color:#ffffff;
   font-size: 18px;
+  font-family: serif-sans;
 }
-
 .inleiding {
   color: #ffffff;
   font-size: 18px;
+  font-
+  
   
 }
 .inleiding {
@@ -128,15 +163,16 @@ nav li a {
     display: block;
     color: #000000;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 20px;
     text-decoration: none;
 }
 nav li a:hover {
     background-color: #a3a5ae;
+    overflow: hidden;
 }
 nav li a.active {
     background-color: #a71111;
-
-  
 }
-}
+ .smalltext {
+   color: white;
+ }
