navigatie en hoofd pagina aangepast

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ p {
   box-sizing:border-box ;
   cursor: pointer;
   margin:10px 15px ;
-  background-image: url("https://wallpapercrafter.com/sizes/1366x768/125104-Porsche-Porsche-911-Carrera-car-vehicle-Forza-Horizon-4-video-games-Porsche-992-Porsche-911-closeup.jpg");
+  background-image: url("https://www.stuttcars.com/wp-content/uploads/2021/12/Porsche-911-Turbo-S-Coupe-992-17-scaled.jpg");
   background-position: center;
   background-size: cover; 
 }
@@ -218,7 +218,7 @@ nav ul {
 
 nav ul li {
     float: left;
-  
+  width
 }
 
 nav li a {
