--- a/style.css
+++ b/style.css
@@ -65,23 +65,26 @@ p {
 }
 .blokTekst {
   width:50%;
-  height: 300px;
+  height: 400px;
   float:left;
+  margin-top: 100px;
   text-align: center;
-  border:solid 2px red;
+  border: solid red 3px;
   flex-basis: 50%;
-  margin-top: 10%;
 }
 .TekstTitel {
   color: white;
   font-family: sans-serif;
+  margin-top: 30px;
 }
-}
+
 .blokIconen {
-  width:40%;
-  float:left;
-  border:solid 2px grey;
+  width:45%;
+  float:center;
+  border:solid 2px #d3e109;
 }
+/*Indeling pagepicker */
+
 .icon {
   width: 250px;
   height: 300px;
@@ -111,10 +114,10 @@ background-image: url("https://www.hdcarwallpapers.com/download/porsche_cayenne_
   width:100%;
   }
 .Titel {
-  font-family: sans-serif;
+  font-family:Noto;
   font-size: 80px;
   color: white;
-  height: 70px;
+  height: 80px;
   text-align: center;
 }
 .tesktKlein {
@@ -159,15 +162,17 @@ background-image: url("https://www.hdcarwallpapers.com/download/porsche_cayenne_
   border: solid 2px red;
   margin-top: 20px;
 }
-.titel718 {
+.titel718{
   font-size: 35px;
+  text-align: center;
   font-weight: 900;
   font-family: sans-serif;
   color: beige;
-
 }
 .tekstpagina {
-  color:#ffffff;
+  color:beige;
+  font-size: 20px;
+  
 }
 .introtekst {
   color:beige;
@@ -184,15 +189,15 @@ background-image: url("https://www.hdcarwallpapers.com/download/porsche_cayenne_
   margin-right: 10px;
   float: left;
   flex-basis: 45%;
-  
 }
 .fotorechts1{
   border-radius: 30px;
-  width: 39%;
+  width: 33%;
   height 95px;
   border: solid 2px red;
   float: right;
   margin-top: 15px;
+  margin-right: 0px;
   flex-basis: 45%; 
 }
 .allinea2 {
@@ -220,22 +225,30 @@ background-image: url("https://www.hdcarwallpapers.com/download/porsche_cayenne_
 }
 .fotolinks1{
   border-radius: 30px;
-  width: 39%;
+  width: 34%;
   height 95px;
   border: solid 2px red;
   float: left;
   margin-top: 15px;
+  margin-left: 40px;
   flex-basis: 45%; 
 }
 .allinea5 {
   width: 55%;
-  height:200px;
+  height:250px;
   border: solid 2px red;
   float: right;
   margin-top: 5px;
   flex-basis: 45%;
 }
-
+.allinea6 {
+  width: 100%;
+  height:250px;
+  border: solid 2px red;
+  float: center;
+  margin-top: 15px;
+  flex-basis: 45%;
+}
 
   
   
@@ -260,18 +273,15 @@ a:hover {
   float: left;
 }
 nav ul {
-    list-style-type: none;
-    margin: auto;
-    padding: 5px;
-    background-color: #a8a4a4;
-    overflow: hidden;
+  list-style-type: none;
+  margin: auto;
+  padding: 5px;
+  background-color: #a8a4a4;
+  overflow: hidden;
   border-radius: 8px;
-   
 }
-
 nav ul li {
     float: left;
-  width
 }
 
 nav li a {
@@ -299,6 +309,6 @@ nav li a.active {
   witdh: 100%;
   height: 40px;
   text-align: center;
- 
-  
 }
+/* Indeling voor cayenne pagina */
+
