--- a/style.css
+++ b/style.css
@@ -8,17 +8,12 @@
 /* Basisinstellingen voor alle pagina's, alleen aanpassen als je pro wilt worden */
 
 html, body {                      /* geldt voor html en body */     /* standaard marge 0 */
-  height:100%
+  height:100%;
   padding: 0;
   background-image: url("https://wallpapercrafter.com/sizes/1366x768/125104-Porsche-Porsche-911-Carrera-car-vehicle-Forza-Horizon-4-video-games-Porsche-992-Porsche-911-closeup.jpg");
   background-repeat: repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
-
-  
-  /* achtergrondkleur lichtgrijs */
-  color: #303030;  
-  /* tekstkleur donkergrijs */
 }  
 
 body * {                          /* geldt voor alles in body */
@@ -28,27 +23,22 @@ body * {                          /* geldt voor alles in body */
 }
 
 /* Indeling voor alle pagina's */
-}
-.belangrijk {
+.bovenTitel {
   font-size: 70px;
   font-weight: bold;
   font-family: sans-serif;
-  color: beige;
-}
-
+  color: white;
+  text-shadow:3px 3px black ;
 }
 .page {
   width: 80%;                   /* vaste breedte van 700 pixels */
   margin: 10px auto;              /* boven en onder 0 pixels marge, links en rechts marge gelijk verdeeld (gecentreerd) */
 }
-
 header, footer {                  /* geldt voor header en footer */
   margin: 10px 0px;
 }
-
 main {                       
   text-align: justify;            /* tekst uitvullen */}
-
 h1 {                      /* geldt voor h1 */
   margin: 30px 30px;
   text-align: center;             /* tekst centreren */
@@ -60,8 +50,7 @@ p {
 
 /* Indeling voor hoofd pagina */
 .pagePicker {
-  border:solid 2px green;
-  width: 100%;
+ width: 100%;
 }
 .blokTekst {
   width:50%;
@@ -69,19 +58,19 @@ p {
   float:left;
   margin-top: 100px;
   text-align: center;
-  border: solid red 3px;
   flex-basis: 50%;
 }
 .TekstTitel {
   color: white;
   font-family: sans-serif;
   margin-top: 30px;
+  text-shadow:2px 2px black ;
+  font-weight: bold;
 }
-
 .blokIconen {
-  width:45%;
+  width:39%;
   float:center;
-  border:solid 2px #d3e109;
+
 }
 /*Indeling pagepicker */
 
@@ -113,73 +102,41 @@ background-image: url("https://www.hdcarwallpapers.com/download/porsche_cayenne_
 .icon img { /*img in .icon */
   width:100%;
   }
-.Titel {
+.OnderTitel {
   font-family:Noto;
   font-size: 80px;
   color: white;
   height: 80px;
   text-align: center;
-}
-.tesktKlein {
-  font-size:1em;
-  color:grey;
-}
-/* Indeling voor 911 pagina */
-.passie {
-  color:#ffffff;
-  font-size: 18px;
-  font-family: serif-sans;
-}
-.inleiding {
-  color: #ffffff;
-  font-size: 18px;
-  font-
+  text-shadow: 3px 3px black;
 }
 
-.inleiding {
-  border: 2px #303030;
-  padding-top:20px;
-  
-.overMij {
-  border: 2px blue
-}  
-  
-  (kolom inleiding)
-}
-.kolomLinks {
-  width:50%;
-  float:left;
-}
-.kolomRechts {
-  width:50%;
-  float:right
-  height: 70px;
-}
-/* Indeling voor 718 pagina */
+/* Indeling voor 911, 718, cayenne panamera pagina */
 .intro {
   width: 100%;
   height: 100px;
   border: solid 2px red;
   margin-top: 20px;
 }
-.titel718{
+.titelelkepagina{
   font-size: 35px;
   text-align: center;
   font-weight: 900;
   font-family: sans-serif;
-  color: beige;
+  color: white;
+  text-shadow: 3px 3px black;
 }
 .tekstpagina {
-  color:beige;
+  color:white;
   font-size: 20px;
-  
 }
 .introtekst {
-  color:beige;
-  font-size: 15px;
+  color:white;
+  font-size: 25px;
   float: center;
   font-weight: bold;
   text-align: left;
+  text-shadow: 3px 3px black;
 }
 .allinea1 {
   width: 55%;
@@ -192,7 +149,7 @@ background-image: url("https://www.hdcarwallpapers.com/download/porsche_cayenne_
 }
 .fotorechts1{
   border-radius: 30px;
-  width: 33%;
+  width: 38%;
   height 95px;
   border: solid 2px red;
   float: right;
@@ -225,7 +182,7 @@ background-image: url("https://www.hdcarwallpapers.com/download/porsche_cayenne_
 }
 .fotolinks1{
   border-radius: 30px;
-  width: 34%;
+  width: 42%;
   height 95px;
   border: solid 2px red;
   float: left;
@@ -250,25 +207,18 @@ background-image: url("https://www.hdcarwallpapers.com/download/porsche_cayenne_
   flex-basis: 45%;
 }
 
-  
-  
-  
-}
-
 /* Opmaak voor alle pagina's */
 
-h1, h2, {
-      color: #525252;
-
-}
 .smalltext {
     text-align: center;
     font-size: 0.7em;
+  color: white;
 }
 a:hover {
     text-decoration: ;
 }
 /* Navigatiebalk voor alle pagina's */ 
+
 .Navigation {
   float: left;
 }
@@ -283,7 +233,6 @@ nav ul {
 nav ul li {
     float: left;
 }
-
 nav li a {
     display: block;
     color: #000000;
@@ -294,7 +243,7 @@ nav li a {
 nav li a:hover {
   margin-right: 5px
   margin-left: 5px;
-  background-color: beige;
+  background-color: #ffffff;
   border-radius: 7px;
   overflow: hidden;
   padding: 10px;
@@ -303,12 +252,10 @@ nav li a:hover {
   text-align: center;
 }
 nav li a.active {
-  background-color: beige;
+  background-color: white;
   border-radius: 8px;
   padding: 10px;
   witdh: 100%;
   height: 40px;
   text-align: center;
 }
-/* Indeling voor cayenne pagina */
-
