--- a/style.css
+++ b/style.css
@@ -115,7 +115,6 @@ background-image: url("https://www.hdcarwallpapers.com/download/porsche_cayenne_
 .intro {
   width: 100%;
   height: 100px;
-  border: solid 2px red;
   margin-top: 20px;
 }
 .titelelkepagina{
@@ -129,6 +128,7 @@ background-image: url("https://www.hdcarwallpapers.com/download/porsche_cayenne_
 .tekstpagina {
   color:white;
   font-size: 20px;
+  float: left;
 }
 .introtekst {
   color:white;
@@ -141,7 +141,6 @@ background-image: url("https://www.hdcarwallpapers.com/download/porsche_cayenne_
 .allinea1 {
   width: 55%;
   height: 130px;
-  border: solid 2px red;
   margin-top: 15px;
   margin-right: 10px;
   float: left;
@@ -151,7 +150,7 @@ background-image: url("https://www.hdcarwallpapers.com/download/porsche_cayenne_
   border-radius: 30px;
   width: 38%;
   height 95px;
-  border: solid 2px red;
+
   float: right;
   margin-top: 15px;
   margin-right: 0px;
@@ -160,7 +159,6 @@ background-image: url("https://www.hdcarwallpapers.com/download/porsche_cayenne_
 .allinea2 {
   width: 55%;
   height: 250px;
-  border: solid 2px red;
   float: left;
   margin-top: 10px;
   flex-basis: 45%;
@@ -168,14 +166,12 @@ background-image: url("https://www.hdcarwallpapers.com/download/porsche_cayenne_
 .allinea3 {
   width: 55%;
   height: 200px;
-  border: solid 2px red;
   float: left;
   flex-basis: 45%;
 }
 .allinea4 {
   width: 55%;
   height:250px;
-  border: solid 2px red;
   float: right;
   margin-top: 15px;
   flex-basis: 45%;
@@ -184,7 +180,7 @@ background-image: url("https://www.hdcarwallpapers.com/download/porsche_cayenne_
   border-radius: 30px;
   width: 42%;
   height 95px;
-  border: solid 2px red;
+  border: solid 2px ;
   float: left;
   margin-top: 15px;
   margin-left: 40px;
@@ -193,7 +189,6 @@ background-image: url("https://www.hdcarwallpapers.com/download/porsche_cayenne_
 .allinea5 {
   width: 55%;
   height:250px;
-  border: solid 2px red;
   float: right;
   margin-top: 5px;
   flex-basis: 45%;
@@ -201,7 +196,6 @@ background-image: url("https://www.hdcarwallpapers.com/download/porsche_cayenne_
 .allinea6 {
   width: 100%;
   height:250px;
-  border: solid 2px red;
   float: center;
   margin-top: 15px;
   flex-basis: 45%;
